@@ -8,6 +8,7 @@ update-manager (1:0.101.1) jaunty; urgency=low
   * DistUpgrade/DistUpgradeAufs.py:
     - do not overlay /var/cache/apt/archives so that the user
       does not have to download the packages twice
+    - honor the TMPDIR environment (by using tempfile)
 
  --
 
